# DOD-ChatBot

./: README.md  pyproject.toml  test.py
backend/: .gitignore  README.md  main.py  requirements.txt  test.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatComponent.tsx  ChunkCard.tsx  FileUpload.tsx  MarkdownRenderer.tsx
frontend/src/services/: api.tsx
